Bug fixes and improvements
x Bug fix: Create settings properly on plugin activation
x Bug fix: Mijnpress framework - Updated to roles, Error: "has_cap was
called with an argument that is deprecated since version 2.0!"
x Misc: Move configuration to Settings admin menu

--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,18 @@
-=== Todo list for version 1.8 ===
+=== Todo list for version 2.0 ===
 - Feature: Select output format of warm_cache_crawl.php (Plain as now, XML or JSON)
 - Feature: Manual Sitemap URL (setting)
 - Feature: Selecting the max age of posts to refresh (Useful for sites with a lot of old content, where caching would be impractical) (setting)
 - Feature: Selecting posts/pages that are -always- cached (by id, or perhaps slug (comma-separated for now)) (setting)
 - Feature: Checkbox: "Always cache pages" (setting)
+- Feature: Set your own API key
 
-- Bug fix: Create settings properly on plugin activation
+x Bug fix: Create settings properly on plugin activation
+x Bug fix: Mijnpress framework - Updated to roles, Error: "has_cap was called with an argument that is deprecated since version 2.0!"
 
 - Misc: CSS Fixes
-- Misc: Move configuration to Settings admin menu
+x Misc: Move configuration to Settings admin menu
+- Misc: Update WP core functions usage where applicable
+
+Legend
+- Not fixed
+x Fixed
