--- a/todo.txt
+++ b/todo.txt
@@ -1,22 +1,25 @@
 === Todo list for version 2.0 ===
-- Feature: Select output format of warm_cache_crawl.php (Plain as now, XML or JSON)
-- Feature: Manual Sitemap URL (setting)
 - Feature: Selecting the max age of posts to refresh (Useful for sites with a lot of old content, where caching would be impractical) (setting)
-- Feature: Selecting posts/pages that are -always- cached (by id, or perhaps slug (comma-separated for now)) (setting)
-- Feature: Checkbox: "Always cache pages" (setting)
+- Feature: Selecting posts/pages that are -always- cached (by URL) (setting)
 - Feature: Set your own API key
+- Feature: Always cache front page checkbox (setting)
 
 x Bug fix: Create settings properly on plugin activation
 x Bug fix: Mijnpress framework - Updated to roles, Error: "has_cap was called with an argument that is deprecated since version 2.0!"
 
-- Misc: Separate logic from presentation by introducing templates
-- Misc: CSS Fixes
+x Misc: Separate logic from presentation by introducing templates. (Only non-converted html left is in mijnpress_plugin_framework.php amd warm_cache_crawl.php)
+x Misc: CSS Fixes
 x Misc: Move configuration to Settings admin menu
-- Misc: Update WP core functions usage where applicable
-
-Legend
-- Not fixed
-x Fixed
+x Misc: Update WP core functions usage where applicable
 
 === Todo list for future versions ===
-- Full localization support
+- Feature: Full localization support
+- Feature: Select output format of warm_cache_crawl.php (Plain as now, XML or JSON)
+- Feature: Manual Sitemap URL (setting)
+
+- Feature: Remove sitemap dependency and query for posts from MySQL via $wpdb instead.
+- Feature: Checkbox: "Always cache pages" (setting)
+
+=== Legend ===
+x => Fixed
+- => Not fixed
