--- a/todo.txt
+++ b/todo.txt
@@ -3,10 +3,13 @@
 - Feature: Selecting posts/pages that are -always- cached (by URL) (setting)
 - Feature: Set your own API key
 - Feature: Always cache front page checkbox (setting)
+- Feature: Select output format of warm_cache_crawl.php (Plain HTML, XML or JSON)
 
 x Bug fix: Create settings properly on plugin activation
 x Bug fix: Mijnpress framework - Updated to roles, Error: "has_cap was called with an argument that is deprecated since version 2.0!"
 
+x Misc: Improved timing class
+x Misc: List of earlier crawls is now sorted by time, DESC. (Latest crawl is first in the list.)
 x Misc: Separate logic from presentation by introducing templates. (Only non-converted html left is in mijnpress_plugin_framework.php amd warm_cache_crawl.php)
 x Misc: CSS Fixes
 x Misc: Move configuration to Settings admin menu
@@ -14,7 +17,6 @@ x Misc: Update WP core functions usage where applicable
 
 === Todo list for future versions ===
 - Feature: Full localization support
-- Feature: Select output format of warm_cache_crawl.php (Plain as now, XML or JSON)
 - Feature: Manual Sitemap URL (setting)
 
 - Feature: Remove sitemap dependency and query for posts from MySQL via $wpdb instead.
